welcome.lessons.welcome.array.search.SecondMaxValue.scala.error
max2Value:10: error: ';' expected but 'if' found.
    } if ((nums(i) < max2)&&(nums(i) <= max1)){
      ^